--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "./gitpush.sh build && webpack",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "gh-pages": "git subtree push --prefix dist origin gh-pages"
